--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,2 @@
-<%= form_with model: @post do |f| %>
-<%= f.label :image %>
-<%= f.text_field :image %>
-<%= f.submit 'Create'%>
-<% end %>
+<h1>New Post</h1>
+<%= render 'post_form' %>
