can follow and unfollow

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
 <%= @user.email %>
+<br>
+
+<%= button_to 'Follow', follow_user_path(@user) %>
+<%= button_to 'Unfollow', unfollow_user_path(@user) %>
