--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,8 @@
 <%= @user.email %>
 <br>
 
-<%= button_to 'Follow', follow_user_path(@user) %>
-<%= button_to 'Unfollow', unfollow_user_path(@user) %>
+<% if current_user.is_following?(@user.id) %>
+	<%= button_to 'Unfollow', unfollow_user_path(@user) %>
+<% else %>
+	<%= button_to 'Follow', follow_user_path(@user) %>
+<% end %>
